--- a/templates/test/new.html.twig
+++ b/templates/test/new.html.twig
@@ -1,10 +1,12 @@
-{% extends 'base.html.twig' %}
-{#{% form_theme form 'bootstrap_4_layout.html.twig' %}#}
+{% extends 'base.html.twig'%}
 
-{% block title %}New Test{% endblock %}
+{% block title %}Test index{% endblock %}
 
-{% block body %}
-    <style> 
+
+
+
+{% block head %} {% block stylesheet %} {{ parent() }}{% endblock %}
+<style> 
 
         .testContainer {
             border-radius: 15px;
@@ -29,15 +31,49 @@
         .correct {
             float: right;
         }     
-    </style>
-    <center>
+    </style> 
+{% endblock %}
+{% block body %}
+    {% block con %}    {{ parent() }} {% endblock %}
+    <div class="alice-bg padding-top-70 padding-bottom-70">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="breadcrumb-area">
+                        <h1>Créer Certification</h1>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="#">Acceuil</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Certification</li>
+                                <li class="breadcrumb-item active" aria-current="page">Créer</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="breadcrumb-form">
+                        <form action="#">
+                            <input type="text" placeholder="Enter Keywords">
+                            <button><i data-feather="search"></i></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Breadcrumb End -->
+
+    <div class="alice-bg section-padding-bottom">
+        <div class="container no-gliters">
+            <div class="row no-gliters">
+            <center>
     <br>
     <br>
     <div class="testContainer">
         {#{{ include('test/_form.html.twig')}} #}
-        <form id="form" method="post" action="{{ path('app_test_new', {'userId':7}) }}" enctype="multipart/form-data">
+        <form id="form" method="post" action="{{ path('app_test_new') }}" enctype="multipart/form-data">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
-                <h1 class="mb-5">Créer une nouvelle certification</h1>
+                <h1 class="mb-5">Créer Quizz</h1>
             </div>
             <div class="form-floating">
                 <input type="text" class="form-control" id="Titre" name="titre" placeholder="Titre..." required>
@@ -62,7 +98,12 @@
     <a href="{{ path('app_test_index') }}">back to list</a>
     </center>
 
-    
+            </div>
+        </div>
+    </div>
+
+    {% block action %} {{ parent() }} {% endblock %}
+    {% block footer %} {{ parent() }} {% endblock %}
 
 
 
