--- a/templates/annonce_back/new.html.twig
+++ b/templates/annonce_back/new.html.twig
@@ -1,11 +1,11 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
-{% block title %}New Annonce{% endblock %}
+{% block title %}Nouvelle Annonce{% endblock %}
 
 {% block body %}
-    <h1>Create new Annonce</h1>
+    <h1>Créér un nouvelle Annonce</h1>
 
     {{ include('annonce_back/_form.html.twig') }}
 
-    <a href="{{ path('annonce_back_index') }}">back to list</a>
+    <a href="{{ path('annonce_back_index') }}">retourner au liste des annonces</a>
 {% endblock %}
