--- a/templates/choix/edit.html.twig
+++ b/templates/choix/edit.html.twig
@@ -1,6 +1,5 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
-{% block title %}Edit Choix{% endblock %}
 
 {% block body %}
     <h1>Edit Choix</h1>
