--- a/templates/question/newGeneric.html.twig
+++ b/templates/question/newGeneric.html.twig
@@ -1,6 +1,5 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
-{% block title %}New Question{% endblock %}
 
 {% block body %}
 <style> 
@@ -9,7 +8,7 @@
             border-radius: 15px;
             background: #00CED1;
             padding: 20px;
-            width: 80vw;
+            width: 65vw;
             overflow: auto;
             display: block;
             text-align: center;
