--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -166,6 +166,7 @@
                                         <li class="menu-item"><a  href="dashboard-applied.html">Applications postulés</a></li>
                                     </ul>
                                 </li>
+                                
 
                                 <li class="menu-item dropdown">
                                     <a title="" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Pages</a>
@@ -204,6 +205,7 @@
                 <li><i class="fas fa-heart"></i><a href="MesAnnonces">Liste des annonces</a></li>
                 <li><i class="fas fa-check-square"></i><a href="/travailleur/GererOffres">Liste de demandes</a></li>
                 <li><i class="fab fa-facebook-messenger"></i><a href="/travailleur/GererOffres">Messages</a></li>
+                <li><i class="fab fa-facebook-messenger"></i><a href="/test/certifs">Certifications</a></li>
 
             </ul>
             <ul class="delete">
