--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -86,6 +86,7 @@
                                     <a title="" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Employeur</a>
                                     <ul  class="dropdown-menu">
                                         <li class="menu-item"><a  href="/Employeur/ModifierSociete">Modifier Société</a></li>
+                                        <li class="menu-item active"><a title="Mes Quizz" href="{{path("app_test_listquizz")}}">Mes Quizz</a></li>
                                     </ul>
                                 </li>
 
