--- a/templates/choix/_delete_form.html.twig
+++ b/templates/choix/_delete_form.html.twig
@@ -1,3 +1,5 @@
+{% extends 'back.html.twig' %}
+
 <form method="post" action="{{ path('app_choix_delete', {'id': choix.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ choix.id) }}">
     <button class="btn">Delete</button>
