--- a/templates/choix/new.html.twig
+++ b/templates/choix/new.html.twig
@@ -1,6 +1,4 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}New Choix{% endblock %}
+{% extends 'back.html.twig' %}
 
 {% block body %}
     <h1>Create new Choix</h1>
