--- a/templates/choix/show.html.twig
+++ b/templates/choix/show.html.twig
@@ -1,6 +1,4 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Choix{% endblock %}
+{% extends 'back.html.twig' %}
 
 {% block body %}
     <h1>Choix</h1>
