--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -1,6 +1,5 @@
-{% extends 'base.html.twig' %}
+{% extends 'back.html.twig' %}
 
-{% block title %}Question{% endblock %}
 
 {% block body %}
     <h1>Question</h1>
