--- a/templates/test/index.html.twig
+++ b/templates/test/index.html.twig
@@ -1,6 +1,4 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Test index{% endblock %}
+{% extends 'back.html.twig' %}
 
 {% block body %}
     <h1>Liste des certifications</h1>
@@ -43,5 +41,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_test_new', {'userId':7}) }}">Create new</a>
+    <a href="{{ path('app_test_newcertif')}}">Create new</a>
 {% endblock %}
