--- a/templates/test/newCertif.html.twig
+++ b/templates/test/newCertif.html.twig
@@ -1,18 +1,13 @@
-{% extends 'base2.html.twig'%}
+{% extends 'back.html.twig'%}
 
-{% block title %}Test index{% endblock %}
-
-
-
-
-{% block head %} {% block stylesheet %} {{ parent() }}{% endblock %}
+{%block body%}
 <style> 
 
         .testContainer {
             border-radius: 15px;
             background: #3D27A7;
             padding: 20px;
-            width: 80vw;
+            width: 65vw;
             overflow: auto;
             display: block;
             text-align: center;
@@ -34,28 +29,25 @@
         .titre{
             color: white;
         }
-
-                .form-floating{
+        #btnCreer{
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .form-floating{
             margin-top: 20px;
             margin-bottom: 20px;
         }
     </style> 
-{% endblock %}
-{% block body %}
-    {% block con %}    {{ parent() }} {% endblock %}
+
     <div class="alice-bg padding-top-70 padding-bottom-70">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <div class="breadcrumb-area">
-                        <h1>Créer Quizz</h1>
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="#">Acceuil</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Mes quizz</li>
-                                <li class="breadcrumb-item active" aria-current="page">Créer</li>
-                            </ol>
-                        </nav>
+                        <h1>Créer une nouvelle Certification</h1>
+
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -78,7 +70,7 @@
         {#{{ include('test/_form.html.twig')}} #}
         <form id="form" method="post" action="{{ path('app_test_new') }}" enctype="multipart/form-data">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
-                <h1 class="mb-5 titre">Créer Quizz</h1>
+                <h1 class="mb-5 titre">Créer Certification</h1>
             </div>
             <div class="form-floating">
                 <input type="text" class="form-control" id="Titre" name="titre" placeholder="Titre..." required>
@@ -95,7 +87,7 @@
                 oninput="validity.valid||(value='');">
                 <label for="duree">Durée (en minutes)</label>
            </div>
-					<button class="btn btn-primary w-100 py-3" type="submit">Créer</button>
+					<button id="btnCreer" class="btn btn-primary w-100 py-3" type="submit">Créer</button>
 
         </form>
 
@@ -106,11 +98,5 @@
             </div>
         </div>
     </div>
+{%endblock%}
 
-    {% block action %} {{ parent() }} {% endblock %}
-    {% block footer %} {{ parent() }} {% endblock %}
-
-
-
-
-{% endblock %}
