--- a/templates/test/passTest.html.twig
+++ b/templates/test/passTest.html.twig
@@ -1,8 +1,8 @@
 
 {% extends 'base.html.twig' %}
-{% block head %}   <script>
+{% block head %}   
+<script>
     var mins = {{test.duree - 1}};
-    mins = 3;   // to remove
     var secs = 59;
     var i = 0;
     function countdown(){
@@ -35,7 +35,35 @@
         var myTimer = setInterval(countdown, 1000);
     //document.getElementById("progressBar").value = 10 - timeleft;
     </script>
-     {% block stylesheet %} {{ parent() }}{% endblock %} {% endblock %}
+        {% block stylesheet %} 
+            {{ parent() }}
+            <style>
+                .questionContainer {
+                    border-radius: 25px;
+                    background: #397BFA;
+                    padding: 20px;
+                    width: 80vw;
+                    overflow: auto;
+                    display: block;
+                    margin-bottom:20px;
+                }
+                input{
+                    font-size:20;
+                }
+                .color{
+                    color:white;
+                    
+                }
+                .size18{
+                    font-size: 18px;
+                }
+                .size26{
+                    font-size: 26px;
+                }
+            </style>
+            
+        {% endblock %} 
+     {% endblock %}
 {% block body %}
     {% block con %}    {{ parent() }} {% endblock %}
     <div class="alice-bg padding-top-70 padding-bottom-70">
@@ -43,7 +71,10 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="breadcrumb-area">
+                               <h1 id="timer" class="float-right">{{test.duree -1}}:59</h1>
+
                         <h1>{{test.titre}}</h1>
+
                     </div>
                 </div>
             </div>
@@ -52,8 +83,9 @@
     <!-- Breadcrumb End -->
 
     <div class="alice-bg section-padding-bottom">
+               {#<h1 id="timer" class="float-right">{{test.duree -1}}:59</h1>#}
+
         <div class="container no-gliters">
-           <h1 id="timer" class="float-right">{{test.duree -1}}:59</h1>
             <div class="row no-gliters">
                 <form method="post" action="{{ path('app_reponse_new')}}" name="answerForm" id="answerForm" enctype="multipart/form-data">
                     <input name="userId" type="hidden" value="{{app.user.id}}"> <!-- change to current user -->
@@ -62,16 +94,16 @@
                     {% set nbrQ = 0%}
                     {% for question in test.questions %}
                         {%set nbrQ = nbrQ + 1%}
-                        <div>
+                        <div class="questionContainer">
                                 
-                                <h2>Question N°{{nbrQ}}</h2>
-                                <p>{{question.enonce}}</p>
+                                <h2 class=" size26">Question N°{{nbrQ}}:</h2>
+                                <p class="size18 color">{{question.enonce}}</p>
                                 {% set nbrC = 0%}
                                 {% for choix in question.choices %}
                                     {% set nbrC = nbrC + 1%}
                                     <div>
-                                        <input type='radio' name="quest{{nbrQ}}" id="choix{{nbrC}}" value="{{choix.id}}"  required>
-                                        <label for="c{{nbrC}}">{{choix.contenu}}</label>
+                                        <input class="size18 color"type='radio' name="quest{{nbrQ}}" id="choix{{nbrC}}" value="{{choix.id}}"  required>
+                                        <label for="c{{nbrC}}" class="size18 color">{{choix.contenu}}</label>
                                     </div>
                                 {% endfor %}
                                 
