--- a/templates/question/newGeneric.html.twig
+++ b/templates/question/newGeneric.html.twig
@@ -6,7 +6,7 @@
 
         .testContainer {
             border-radius: 15px;
-            background: #00CED1;
+            background: #3D27A7;
             padding: 20px;
             width: 65vw;
             overflow: auto;
@@ -16,9 +16,9 @@
 
         .questionContainer {
             border-radius: 15px;
-            background: #00CED1;
+            background: #3D27A7;
             padding: 20px;
-            width: 80vw;
+            width: 65vw;
             overflow: auto;
             display: block;
             text-align: center;
@@ -27,13 +27,15 @@
         .correct {
             float: right;
         }     
+        .section-title{
+            margin-bottom: 10px;
+        }
     </style>
     
     <center>
         <div class="questionContainer" id="newQuestion">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
-                <h6 class="section-title bg-white text-center text-primary px-3">Forum</h6>
-                <h1 class="mb-5">Créer Question</h1>
+                <h6 class="section-title bg-white text-center text-primary px-3">Créer Question</h6>
             </div>
             <div class="col-lg-12 col-md-12 wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
   
