--- a/templates/test/listquizz.html.twig
+++ b/templates/test/listquizz.html.twig
@@ -5,7 +5,31 @@
 
 
 
-{% block head %} {% block stylesheet %} {{ parent() }}{% endblock %} {% endblock %}
+{% block head %} 
+    {% block stylesheet %} {{ parent() }}
+        <style>
+            td{
+                font-size: 18px
+            }
+            th{
+                font-size: 20px
+            }
+            .font14{
+                font-size: 15px
+            }
+            a:link {
+                color: white;
+                background-color: transparent;
+                text-decoration: none;
+            }
+            a:visited {
+                color: white;
+                background-color: transparent;
+                text-decoration: none;
+                }
+        </style>
+    {% endblock %} 
+{% endblock %}
 {% block body %}
     {% block con %}    {{ parent() }} {% endblock %}
     <div class="alice-bg padding-top-70 padding-bottom-70">
@@ -37,36 +61,40 @@
 
     <div class="alice-bg section-padding-bottom">
         <div class="container no-gliters">
+        <button class="btn float-right btn-success font14"> <a href="{{path("app_test_new")}}">Créer</a></button>
             <div class="row no-gliters">
-                <table class="table table-hover table-bordered table-striped">
-                    <thead class="table-header">
-                        <tr>
-                            <th>Titre</th>
-                            <th>Nbrtentative</th>
-                            <th>Duree</th>
-                            <th>actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    {% for test in tests %}
-                        <tr>
-                            <td>{{ test.titre }}</td>
-                            <td>{{ test.nbrtentative }}</td>
-                            <td>{{ test.duree }}</td>
-                            <td>
-                                <a href="{{ path('app_test_pass', {'id': test.id}) }}">Passer </a>
-                            </td>
-                        </tr>
-                    {% else %}
-                        <tr>
-                            <td colspan="9">no records found</td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+            
+                <div class="col">
+                    <div class="dashboard-container">
+                        <table class="table table-bordered">
+                            <thead class="table-header">
+                                <tr>
+                                    <th>Titre</th>
+                                    <th>Nbrtentative</th>
+                                    <th>Duree</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for test in tests %}
+                                <tr>
+                                    <td>{{ test.titre }}</td>
+                                    <td>{{ test.nbrtentative }}</td>
+                                    <td>{{ test.duree }}</td>
 
+                                </tr>
+                            {% else %}
+                                <tr>
+                                    <td colspan="9">pas des quizz à afficher</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                        
+                        
                         {%block sidebar%}    {{ parent() }}
-
+                    </div>
+                    
+                </div>
             </div>
         </div>
     </div>
@@ -76,5 +104,5 @@
 
 
 
-
+{% endblock %}
 {% endblock %}
