--- a/templates/test/newCertif.html.twig
+++ b/templates/test/newCertif.html.twig
@@ -39,6 +39,7 @@
             margin-top: 20px;
             margin-bottom: 20px;
         }
+
     </style> 
 
     <div class="alice-bg padding-top-70 padding-bottom-70">
@@ -68,7 +69,7 @@
     <br>
     <div class="testContainer">
         {#{{ include('test/_form.html.twig')}} #}
-        <form id="form" method="post" action="{{ path('app_test_new') }}" enctype="multipart/form-data">
+        <form id="form" method="post" action="{{ path('app_test_newcertif') }}" enctype="multipart/form-data">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
                 <h1 class="mb-5 titre">Créer Certification</h1>
             </div>
@@ -83,7 +84,7 @@
                     <label for="nbrTent">Nombre de tentatives</label>     
            </div>
            <div class="form-floating">
-                <input type="number" class="form-control" id="duree" name="duree" min=15 max=240 required
+                <input type="number" class="form-control" id="duree" name="duree" min=3 max=240 required
                 oninput="validity.valid||(value='');">
                 <label for="duree">Durée (en minutes)</label>
            </div>
